<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cherwell</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_news">News </string>
    <string name="title_activity_full_story">Full Article</string>
    <string name="title_activity_video">Video</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_news_fragment">NewsFragment</string>
    <string name="information">App Information</string>
    <string name="news">News Feeds</string>
    <string name="fit_college">Fit College</string>
    <string name="cherwell_caps">CHERWELL</string>
    <string name="other_caps">OTHER</string>
    <string name="contact_caps">CONTACT US</string>
    <string name="newsdesk">Tip-offs</string>
    <string name="feedback">Rate and Review</string>
    <string name="settings">Settings</string>
    <string name="attach">Attach File</string>
    
    <string-array name="section_list">
        <item>News</item>
        <item>Comment</item>
        <item>Lifestyle</item>
        <item>Sport</item>
        <item>Culture</item>
        <item>Cherwell TV</item>
        <item>Fashion</item>
        <item>Blogs</item>
    </string-array>
    
</resources>